<resources>
    <string name="app_name">StoryApp</string>
    <string name="title_welcome_page">Welcome to StoryApp!</string>
    <string name="message_welcome_page">Want to see a review of our application? Come on, register or log in first!</string>
    <string name="login">Login</string>
    <string name="signup">Signup</string>
    <string name="title_login_page">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="title_signup_page">SignUp</string>
    <string name="name">Name</string>
    <string name="continue_title">Continue</string>
    <string name="success_title">Success</string>
    <string name="failed_title">Failed</string>
    <string name="try_again">Try Again</string>
    <string name="error_empty_field">Can not be empty</string>
    <string name="error_password">Password must not be less than 8 characters</string>
    <string name="sign_up">Don\'t have an account? Register</string>
    <string name="sign_in">Already have account? Login</string>
    <string name="logout">Logout</string>
    <string name="logout_title">Logout</string>
    <string name="logout_success">Logout success</string>
    <string name="logout_message">Are you sure you want to logout?</string>
    <string name="yes_title">Yes</string>
    <string name="no_title">No</string>
    <string name="title">Name</string>
    <string name="date">date</string>
    <string name="descriptions">Decriptions</string>
    <string name="just_now">Just now</string>
    <string name="minutes_ago">%d minutes ago</string>
    <string name="hours_ago">%d hours ago</string>
    <string name="invalid_date">Invalid Date</string>
    <string name="empty_story">There isn\'t any story</string>
    <string name="photo">photo</string>
    <string name="title_detail">Detail StoryApp</string>
    <string name="detail_description">Description</string>
    <string name="detail_date">Date</string>
    <string name="uploaded_by">Name</string>
    <string name="empty_detail_story">There are no story details</string>
    <string name="title_add_story">Upload Story</string>
    <string name="camera">Camera</string>
    <string name="camerax">CameraX</string>
    <string name="gallery">Gallery</string>
    <string name="description">Descriptions</string>
    <string name="upload">Upload</string>
    <string name="add_story">Add your story</string>
    <string name="empty_warning_image">Please, Upload Image first</string>
    <string name="close_title">Close</string>
    <string name="empty_description_warning">warning!!!</string>
    <string name="menu_setting">setting</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="maps">Maps</string>
    <string name="normal_type">Normal</string>
    <string name="satellite_type">Satellite</string>
    <string name="terrain_type">Terrain</string>
    <string name="hybrid_type">Hybrid</string>
    <string name="app_name_maps">StoryApp Maps</string>
    <string name="empty_maps_story">There aren\'t any stories displayed on the maps</string>
    <string name="retry">Retry</string>

</resources>