<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_margin="15dp"
    app:cardCornerRadius="20dp"
    app:cardElevation="20dp">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/story"
        android:layout_width="match_parent"
        android:layout_height="292dp">

        <androidx.cardview.widget.CardView
            android:id="@+id/cardviewImageView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            app:cardCornerRadius="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/iv_item_photo"
                android:layout_width="match_parent"
                android:layout_height="147dp"
                android:layout_margin="5dp"
                android:importantForAccessibility="no"
                android:transitionName="profile"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_baseline_photo_24"
                tools:srcCompat="@tools:sample/avatars" />

        </androidx.cardview.widget.CardView>


        <TextView
            android:id="@+id/tv_item_name"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:paddingBottom="8dp"
            android:text="@string/title"
            android:textColor="@color/black"
            android:textSize="19sp"
            android:textStyle="bold"
            android:transitionName="name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cardviewImageView" />

        <TextView
            android:id="@+id/dateTextView"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="40dp"
            android:paddingBottom="8dp"
            android:text="@string/date"
            android:textColor="@color/black"
            android:textSize="19sp"
            android:transitionName="name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cardviewImageView" />

        <TextView
            android:id="@+id/description"
            android:layout_width="match_parent"
            android:layout_height="28dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="32dp"
            android:paddingBottom="10dp"
            android:text="@string/descriptions"
            android:textColor="@color/black"
            android:textSize="17sp"
            android:transitionName="description"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_item_name" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>